# mavlink-router

./: debuild.sh  mavlink-router.conf.in  mavlink-router.service.in  meson-cross-arm64.ini  meson-cross-armhf.ini  meson.build  meson_options.txt
debian/: changelog  control  copyright  rules
src/: endpoint.h  main.cpp  mainloop.cpp  mainloop.h  meson.build  zeroconf.cpp  zeroconf.h
